[gd_scene load_steps=44 format=2]

[ext_resource path="res://menu/crediti_over.png" type="Texture" id=1]
[ext_resource path="res://menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://menu/main_menu_song.ogg" type="AudioStream" id=3]
[ext_resource path="res://wall_2.png" type="Texture" id=4]
[ext_resource path="res://floor.png" type="Texture" id=5]
[ext_resource path="res://wall.png" type="Texture" id=6]
[ext_resource path="res://background.png" type="Texture" id=7]
[ext_resource path="res://menu/titolo.png" type="Texture" id=8]
[ext_resource path="res://menu/play.png" type="Texture" id=9]
[ext_resource path="res://menu/play_over.png" type="Texture" id=10]
[ext_resource path="res://menu/credits.png" type="Texture" id=11]
[ext_resource path="res://menu/it_on.png" type="Texture" id=12]
[ext_resource path="res://menu/it_over.png" type="Texture" id=13]
[ext_resource path="res://menu/it_off.png" type="Texture" id=14]
[ext_resource path="res://menu/en_over.png" type="Texture" id=15]
[ext_resource path="res://menu/en_off.png" type="Texture" id=16]
[ext_resource path="res://menu/en_on.png" type="Texture" id=17]
[ext_resource path="res://menu/gioca.png" type="Texture" id=18]
[ext_resource path="res://menu/gioca_over.png" type="Texture" id=19]
[ext_resource path="res://menu/crediti.png" type="Texture" id=20]
[ext_resource path="res://menu/credits_over.png" type="Texture" id=21]
[ext_resource path="res://tree/Tree.tscn" type="PackedScene" id=22]
[ext_resource path="res://lightning/Lightning.tscn" type="PackedScene" id=23]
[ext_resource path="res://lightning/Lightning.gd" type="Script" id=24]
[ext_resource path="res://fog.shader" type="Shader" id=25]
[ext_resource path="res://rain/Rain.tscn" type="PackedScene" id=26]
[ext_resource path="res://rain/Rain.gd" type="Script" id=27]
[ext_resource path="res://cutscenes/Cutscene_42.tscn" type="PackedScene" id=28]
[ext_resource path="res://tomb/TombFront.tscn" type="PackedScene" id=29]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=3]
points = PoolVector2Array( 64, 64, 32, 64, 32, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=4]
points = PoolVector2Array( 64, 64, 0, 64, 0, 57, 64, 56 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 32, 64, 0, 64, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=6]
points = PoolVector2Array( 32, 64, 0, 64, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=7]
points = PoolVector2Array( 32, 64, 0, 64, 0, 0, 32, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 64, 64, 0, 64, 0, 32, 64, 32 )

[sub_resource type="TileSet" id=9]
0/name = "cemetery_wall_tl"
0/texture = ExtResource( 7 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 64, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 1 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 1 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "cemetery_wall_l"
1/texture = ExtResource( 7 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 128, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 2 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "cemetery_wall_bl"
2/texture = ExtResource( 7 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 192, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 3 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 3 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "cemetery_wall_b"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 64, 192, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape = SubResource( 4 )
3/shape_one_way = false
3/shape_one_way_margin = 1.0
3/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 4 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
3/z_index = 0
4/name = "cemetery_wall_br"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 128, 192, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape = SubResource( 5 )
4/shape_one_way = false
4/shape_one_way_margin = 1.0
4/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
4/z_index = 0
5/name = "cemetery_wall_r"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 128, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape = SubResource( 6 )
5/shape_one_way = false
5/shape_one_way_margin = 1.0
5/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 6 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
5/z_index = 0
6/name = "cemetery_wall_tr"
6/texture = ExtResource( 7 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 128, 64, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape = SubResource( 7 )
6/shape_one_way = false
6/shape_one_way_margin = 1.0
6/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 7 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
6/z_index = 0
7/name = "cemetery_wall_t"
7/texture = ExtResource( 7 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 64, 64, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape = SubResource( 8 )
7/shape_one_way = false
7/shape_one_way_margin = 1.0
7/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
7/z_index = 0

[sub_resource type="ConvexPolygonShape2D" id=10]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="OccluderPolygon2D" id=11]
polygon = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="ConvexPolygonShape2D" id=12]
points = PoolVector2Array( 64, 64, 0, 64, 0, 0, 64, 0 )

[sub_resource type="TileSet" id=13]
0/name = "void"
0/texture = ExtResource( 6 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 0.835294, 0.262745, 0.262745, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 10 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 10 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "floor.png 1"
1/texture = ExtResource( 5 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0
2/name = "wall_2.png 2"
2/texture = ExtResource( 4 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 11 )
2/navigation_offset = Vector2( 0, 0 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 12 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 12 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0
3/name = "grass_1"
3/texture = ExtResource( 7 )
3/tex_offset = Vector2( 0, 0 )
3/modulate = Color( 1, 1, 1, 1 )
3/region = Rect2( 0, 0, 64, 64 )
3/tile_mode = 0
3/occluder_offset = Vector2( 0, 0 )
3/navigation_offset = Vector2( 0, 0 )
3/shape_offset = Vector2( 0, 0 )
3/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
3/shape_one_way = false
3/shape_one_way_margin = 0.0
3/shapes = [  ]
3/z_index = 0
4/name = "grass_2"
4/texture = ExtResource( 7 )
4/tex_offset = Vector2( 0, 0 )
4/modulate = Color( 1, 1, 1, 1 )
4/region = Rect2( 64, 0, 64, 64 )
4/tile_mode = 0
4/occluder_offset = Vector2( 0, 0 )
4/navigation_offset = Vector2( 0, 0 )
4/shape_offset = Vector2( 0, 0 )
4/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
4/shape_one_way = false
4/shape_one_way_margin = 0.0
4/shapes = [  ]
4/z_index = 0
5/name = "grass_3"
5/texture = ExtResource( 7 )
5/tex_offset = Vector2( 0, 0 )
5/modulate = Color( 1, 1, 1, 1 )
5/region = Rect2( 128, 0, 64, 64 )
5/tile_mode = 0
5/occluder_offset = Vector2( 0, 0 )
5/navigation_offset = Vector2( 0, 0 )
5/shape_offset = Vector2( 0, 0 )
5/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
5/shape_one_way = false
5/shape_one_way_margin = 0.0
5/shapes = [  ]
5/z_index = 0
6/name = "floor_1"
6/texture = ExtResource( 7 )
6/tex_offset = Vector2( 0, 0 )
6/modulate = Color( 1, 1, 1, 1 )
6/region = Rect2( 192, 0, 64, 64 )
6/tile_mode = 0
6/occluder_offset = Vector2( 0, 0 )
6/navigation_offset = Vector2( 0, 0 )
6/shape_offset = Vector2( 0, 0 )
6/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
6/shape_one_way = false
6/shape_one_way_margin = 0.0
6/shapes = [  ]
6/z_index = 0
7/name = "floor_2"
7/texture = ExtResource( 7 )
7/tex_offset = Vector2( 0, 0 )
7/modulate = Color( 1, 1, 1, 1 )
7/region = Rect2( 256, 0, 64, 64 )
7/tile_mode = 0
7/occluder_offset = Vector2( 0, 0 )
7/navigation_offset = Vector2( 0, 0 )
7/shape_offset = Vector2( 0, 0 )
7/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
7/shape_one_way = false
7/shape_one_way_margin = 0.0
7/shapes = [  ]
7/z_index = 0
8/name = "floor_3"
8/texture = ExtResource( 7 )
8/tex_offset = Vector2( 0, 0 )
8/modulate = Color( 1, 1, 1, 1 )
8/region = Rect2( 320, 0, 64, 64 )
8/tile_mode = 0
8/occluder_offset = Vector2( 0, 0 )
8/navigation_offset = Vector2( 0, 0 )
8/shape_offset = Vector2( 0, 0 )
8/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
8/shape_one_way = false
8/shape_one_way_margin = 0.0
8/shapes = [  ]
8/z_index = 0

[sub_resource type="ShaderMaterial" id=14]
shader = ExtResource( 25 )
shader_param/color = Vector3( 0.33, 0.5, 0.82 )

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="MainTitle" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="Objects" type="YSort" parent="."]

[node name="Tree4" parent="Objects" instance=ExtResource( 22 )]
position = Vector2( 752, 472.977 )

[node name="Walls" type="TileMap" parent="Objects"]
light_mask = 3
z_index = -1
tile_set = SubResource( 9 )
cell_tile_origin = 2
cell_y_sort = true
format = 1

[node name="Ground" type="TileMap" parent="Objects"]
light_mask = 3
z_index = -1
tile_set = SubResource( 13 )
format = 1
tile_data = PoolIntArray( 0, 3, 0, 1, 3, 0, 2, 5, 0, 3, 3, 0, 4, 3, 0, 5, 3, 0, 6, 3, 0, 7, 3, 0, 8, 3, 0, 9, 3, 0, 10, 3, 0, 11, 3, 0, 12, 3, 0, 13, 3, 0, 14, 3, 0, 15, 5, 0, 65536, 3, 0, 65537, 5, 0, 65538, 5, 0, 65539, 5, 0, 65540, 5, 0, 65541, 5, 0, 65542, 3, 0, 65543, 3, 0, 65544, 3, 0, 65545, 3, 0, 65546, 3, 0, 65547, 3, 0, 65548, 3, 0, 65549, 3, 0, 65550, 3, 0, 65551, 5, 0, 131072, 3, 0, 131073, 5, 0, 131074, 4, 0, 131075, 5, 0, 131076, 3, 0, 131077, 5, 0, 131078, 4, 0, 131079, 4, 0, 131080, 4, 0, 131081, 4, 0, 131082, 3, 0, 131083, 3, 0, 131084, 3, 0, 131085, 3, 0, 131086, 5, 0, 131087, 5, 0, 196608, 3, 0, 196609, 5, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 5, 0, 196614, 3, 0, 196615, 3, 0, 196616, 4, 0, 196617, 3, 0, 196618, 3, 0, 196619, 3, 0, 196620, 4, 0, 196621, 3, 0, 196622, 5, 0, 196623, 3, 0, 262144, 3, 0, 262145, 5, 0, 262146, 4, 0, 262147, 5, 0, 262148, 5, 0, 262149, 5, 0, 262150, 5, 0, 262151, 4, 0, 262152, 3, 0, 262153, 4, 0, 262154, 3, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 5, 0, 262159, 3, 0, 327680, 3, 0, 327681, 5, 0, 327682, 4, 0, 327683, 4, 0, 327684, 5, 0, 327685, 3, 0, 327686, 3, 0, 327687, 5, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 3, 0, 327692, 3, 0, 327693, 5, 0, 327694, 5, 0, 327695, 3, 0, 393216, 3, 0, 393217, 5, 0, 393218, 5, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 393223, 4, 0, 393224, 5, 0, 393225, 5, 0, 393226, 5, 0, 393227, 5, 0, 393228, 5, 0, 393229, 5, 0, 393230, 5, 0, 393231, 5, 0, 458752, 3, 0, 458753, 3, 0, 458754, 5, 0, 458755, 5, 0, 458756, 5, 0, 458757, 5, 0, 458758, 5, 0, 458759, 5, 0, 458760, 5, 0, 458761, 5, 0, 458762, 4, 0, 458763, 4, 0, 458764, 4, 0, 458765, 4, 0, 458766, 3, 0, 458767, 3, 0, 524288, 3, 0, 524289, 3, 0, 524290, 3, 0, 524291, 3, 0, 524292, 3, 0, 524293, 3, 0, 524294, 3, 0, 524295, 3, 0, 524296, 3, 0, 524297, 3, 0, 524298, 3, 0, 524299, 3, 0, 524300, 3, 0, 524301, 3, 0, 524302, 3, 0, 524303, 3, 0 )

[node name="Tree" parent="Objects" instance=ExtResource( 22 )]
position = Vector2( 24, 136 )

[node name="Tree2" parent="Objects" instance=ExtResource( 22 )]
position = Vector2( 184, 496 )

[node name="Tree3" parent="Objects" instance=ExtResource( 22 )]
position = Vector2( 848, 128 )

[node name="42" parent="Objects" instance=ExtResource( 28 )]
position = Vector2( -40, 328 )

[node name="TombFront" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 128, 232 )

[node name="TombFront2" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 160, 232 )

[node name="TombFront3" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 192, 230.975 )

[node name="TombFront4" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 224, 229.951 )

[node name="TombFront5" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 256, 229.951 )

[node name="TombFront6" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 888, 432 )

[node name="TombFront7" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 920, 430.975 )

[node name="TombFront8" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 768, 80 )

[node name="TombFront9" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 160, 80 )

[node name="TombFront10" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 192, 80 )

[node name="TombFront11" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 40, 429.951 )

[node name="TombFront12" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 72, 428.926 )

[node name="TombFront13" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 105.701, 428.926 )

[node name="TombFront14" parent="Objects" instance=ExtResource( 29 )]
position = Vector2( 143.011, 427.902 )

[node name="Fog" type="Sprite" parent="."]
material = SubResource( 14 )
position = Vector2( 1104, 576 )
scale = Vector2( 80, 40 )
texture = ExtResource( 6 )

[node name="Lightning" type="Node2D" parent="." instance=ExtResource( 23 )]
script = ExtResource( 24 )

[node name="Rain" type="Node2D" parent="." instance=ExtResource( 26 )]
position = Vector2( 552, -376 )
script = ExtResource( 27 )

[node name="MenuUI" type="CanvasLayer" parent="."]

[node name="TitleSprite" type="Sprite" parent="MenuUI"]
position = Vector2( 512, 72 )
texture = ExtResource( 8 )
hframes = 3
frame = 1

[node name="Start" type="TextureButton" parent="MenuUI"]
margin_left = 424.0
margin_top = 176.0
margin_right = 552.0
margin_bottom = 304.0
texture_normal = ExtResource( 9 )
texture_hover = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Credits" type="TextureButton" parent="MenuUI"]
margin_left = 424.0
margin_top = 352.0
margin_right = 552.0
margin_bottom = 480.0
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LangIT" type="TextureButton" parent="MenuUI"]
margin_left = 495.026
margin_top = 262.0
margin_right = 623.026
margin_bottom = 390.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 14 )
texture_hover = ExtResource( 13 )
texture_focused = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LangEN" type="TextureButton" parent="MenuUI"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 356.0
margin_top = -26.0
margin_right = 484.0
margin_bottom = 102.0
focus_mode = 1
enabled_focus_mode = 1
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 15 )
texture_focused = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gioca" type="TextureButton" parent="MenuUI"]
visible = false
margin_left = 424.0
margin_top = 176.0
margin_right = 552.0
margin_bottom = 304.0
texture_normal = ExtResource( 18 )
texture_hover = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crediti" type="TextureButton" parent="MenuUI"]
visible = false
margin_left = 424.0
margin_top = 352.0
margin_right = 552.0
margin_bottom = 480.0
texture_normal = ExtResource( 20 )
texture_hover = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Move42" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="MenuUI/Start" to="." method="start_game"]
[connection signal="pressed" from="MenuUI/Credits" to="." method="show_credits"]
[connection signal="pressed" from="MenuUI/LangIT" to="." method="set_it"]
[connection signal="pressed" from="MenuUI/LangEN" to="." method="set_en"]
[connection signal="pressed" from="MenuUI/Gioca" to="." method="start_game"]
[connection signal="pressed" from="MenuUI/Crediti" to="." method="show_credits"]
[connection signal="timeout" from="Move42" to="." method="_on_Move42_timeout"]
